--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "submodule tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install-sub": "./src/submodule.sh"
   },
   "repository": {
     "type": "git",
