--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "sambotha-parser"]
-	path = sambotha-parser
+[submodule "raw/sambotha-parser"]
+	path = raw/sambotha-parser
 	url = git@github.com:karmapa/sambotha-parser.git
-[submodule "tibetdoc-parser"]
-  path = sambotha-parser
-  url = git@github.com:karmapa/tibetdoc-parser.git
