add postinstall script
Signed-off-by: sxf <sunxfancy@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "rebuild-sub.cmd": "./src/rebuildSub.cmd"
   },
   "scripts": {
+	"postinstall": "install-sub",
     "install-sub": "./src/submodule.sh",
     "rebuild-sub": "./src/rebuildSub.sh"
   },
